# turbozero

./: .gitignore  .pylintrc  AGENTS.md  CLAUDE.md  README.md  benchmark_results.md  curriculum_example.py  pyproject.toml  pytest.ini  turbozero_4way_value_head.md
.cursor/rules/: rules.mdc
benchmarks/: bench_game_env.py  bench_mcts.py  bench_stochastic_mcts.py  benchmark_cli.py  benchmark_common.py
benchmarks/profiles/: darwin_arm_cpu.json  darwin_arm_cpu_mcts_sims20.json  darwin_arm_cpu_stochastic_mcts_sims200.json  linux_x86_64_gpu.json
bg/: __init__.py  bgcommon.py
core/: bgcommon.py  common.py  types.py
core/evaluators/: alphazero.py  evaluation_fns.py  evaluator.py  nn_evaluator.py  pig_optimal.py
core/evaluators/mcts/: LLM.txt  __init__.py  action_selection.py  equity.py  gumbel.py  gumbel_mcts.py  gumbel_stochastic_mcts.py  mcts.py  state.py  stochastic_mcts.py  unified_mcts.py  weighted_mcts.py
core/memory/: replay_memory.py
core/networks/: azresnet.py  mlp.py
core/testing/: single_player_tester.py  tester.py  two_player_baseline.py  two_player_tester.py  utils.py
core/training/: augmentation.py  loss_fns.py  stochastic_train.py  train.py
core/trees/: tree.py
docs/: MCTS_CONSOLIDATION_PLAN.md  PGX_STOCHASTIC_PROBS_PROPOSAL.md
notebooks/: hello_world-bg.ipynb  hello_world.ipynb
notebooks/wandb/: latest-run
notebooks/wandb/run-20250213_202235-2mjmwpwb/: run-2mjmwpwb.wandb
notebooks/wandb/run-20250213_202235-2mjmwpwb/files/: wandb-metadata.json
notebooks/wandb/run-20250214_142320-dqftfe6b/files/: requirements.txt  wandb-metadata.json
scripts/: debug_tictactoe_mcts.py  train_2048_15min.py  train_2048_comparison.py  train_2048_long.py  train_pig_15min.py  train_tictactoe_30min.py  validate_mcts_variants.py
setupscripts/: vastaiubuntu20.sh
tests/: benchmark_mcts.py  conftest.py  test_2048_symmetry.py  test_4way_value_head.py  test_backgammon_minimal.py  test_backgammon_train.py  test_code_review_bugs.py  test_explore_stochastic_action_selector.py  test_gumbel_mcts_2048.py  test_match_equity.py  test_per_child_discount.py  test_stochastic_mcts1.py  test_stochastic_mcts2.py  test_stochastic_mcts3.py  test_unified_mcts.py  test_update_root_bug.py
visualizations/: create_mcts_visualization.py
