[tool.poetry]
name = "turbozero"
version = "0.2.0"
description = "vectorized alphazero/mcts in JAX"
authors = ["lowrollr <92640744+lowrollr@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "core" }
]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"  # support 3.10, 3.11, 3.12 but not 4.0
graphviz = ">=0.20.1"
wandb = ">=0.18.6"
jax = {extras = ["cuda12"], version = "^0.6.1"}
jaxlib = ">=0.5.0"
flax = ">=0.10.5"
optax = ">=0.1.8"
orbax-checkpoint = ">=0.10.1"
chex = ">=0.1.85"
pytest = "^8.3.5"
cairosvg = "^2.8.2"
svgwrite = "^1.4.3"
dm-haiku = "^0.0.14"
pgx = {git = "https://github.com/sile16/pgx.git", rev = "master"}


[tool.poetry.group.dev.dependencies]
notebook = ">=7.0.0"
python-lsp-server = {extras = ["all"], version = "^1.12.2"}
jupyter-lsp = "^2.2.5"
ipykernel = "^6.29.5"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
