[tool.poetry]
name = "turbozero"
version = "0.5.0"
description = "vectorized alphazero/mcts in JAX"
authors = ["lowrollr <92640744+lowrollr@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "core" }
]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
graphviz = ">=0.20.1"
wandb = ">=0.18.6"
jax = ">=0.8.1"
jaxlib = ">=0.5.0"
jax-cuda12-plugin = {version = ">=0.8.1", optional = true}
jax-cuda12-pjrt = {version = ">=0.8.1", optional = true}
flax = ">=0.12.0"
optax = ">=0.1.8"
orbax-checkpoint = ">=0.10.1"
chex = ">=0.1.85"
pytest = "^8.3.5"
cairosvg = "^2.8.2"
svgwrite = "^1.4.3"
dm-haiku = "^0.0.14"
pgx = {git = "https://github.com/sile16/pgx.git", rev = "master"}


[tool.poetry.extras]
cuda12 = ["jax-cuda12-plugin", "jax-cuda12-pjrt"]

[tool.poetry.group.dev.dependencies]
notebook = ">=7.0.0"
python-lsp-server = {extras = ["all"], version = "^1.12.2"}
jupyter-lsp = "^2.2.5"
ipykernel = "^6.29.5"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
